DC21-MISC: Fix back button behaviour across the app and fix footer from wrapping

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -1489,6 +1489,7 @@ table.activity, table.activity tbody
     bottom: 0px
     height: 26px
     width: 100%
+    min-width: 400px
     background: #F5F5F5
     +border(1px, solid, #dfdfdf)
     p
